--- a/Frontend/src/assets/tailwind.css
+++ b/Frontend/src/assets/tailwind.css
@@ -2,6 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+
+
+
+
+/* components of tailwindcss */
+@layer components {
+  .product-hover{
+    @apply lg:hover:shadow-lg overflow-hidden lg:hover:delay-100 lg:hover:duration-200 lg:hover:ease-in-out ;
+  }
+}
+
 .topbarLayout {
   width: 83% !important;
 }
@@ -40,3 +51,5 @@
 .custom-overflowscroll::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+
+
