--- a/Frontend/src/assets/tailwind.css
+++ b/Frontend/src/assets/tailwind.css
@@ -4,7 +4,11 @@
 
 
 
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,500;1,300;1,400;1,500&display=swap');
 
+#app{
+  font-family: 'Work Sans', sans-serif;
+}
 
 /* components of tailwindcss */
 @layer components {
