--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -47,6 +47,9 @@
   .preview-image-item {
     @apply text-white bg-slate-600 rounded-full w-5 h-5 flex flex-col justify-center items-center p-1 shadow-md hover:bg-red-600 focus:outline-none;
   }
+
+  /* table */
+   
 }
 
 /* transitions */
