--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -49,7 +49,79 @@
   }
 
   /* table */
-   
+
+  .layout {
+    @apply px-2 xl:px-4 mx-auto w-full;
+  }
+  .layout__inner {
+    @apply w-full relative overflow-hidden bg-white dark:bg-gray-800;
+  }
+  .table-wrapper {
+    @apply overflow-x-auto max-h-[740px] overflow-y-auto ;
+  }
+  .table {
+    @apply w-full text-sm text-left text-gray-500 dark:text-gray-400 border-separate border border-slate-100;
+  }
+  .table__header {
+    @apply text-xs uppercase text-white bg-lime-600 overflow-hidden sticky top-0;
+  }
+  .table__row {
+    @apply border-b dark:border-gray-600;
+  }
+  .table__header-cell {
+    @apply px-4 py-1 border border-slate-300;
+  }
+  .table__body {
+    /* Optional: custom styles for the table body */
+  }
+  .table__body-row--hover {
+    @apply hover:bg-gray-100 dark:hover:bg-gray-700;
+  }
+  .table__cell {
+    @apply px-4 py-2 font-medium text-gray-900 whitespace-nowrap dark:text-white border border-slate-300;
+  }
+  .table__cell--title {
+    @apply font-medium text-gray-900 whitespace-nowrap dark:text-white;
+  }
+  .table__cell--delete {
+    @apply text-center flex justify-center items-center;
+     
+  }
+  .table__checkbox-wrapper {
+    @apply flex;
+  }
+  .table__serial {
+    @apply ml-2;
+  }
+ 
+  .table__quantity-controls {
+    @apply flex gap-x-2;
+  }
+  .table__quantity {
+    @apply w-4 h-4 flex justify-center items-center;
+  }
+  .button {
+    @apply border border-inherit rounded-md shadow-md p-0.5 w-4 h-4 flex justify-center items-center;
+  }
+  .button--increase {
+    @apply bg-lime-600 text-white;
+  }
+  .button--decrease {
+    @apply bg-rose-600 text-white;
+  }
+  .button--hidden {
+    @apply hidden;
+  }
+  .button--inline {
+    @apply inline-flex;
+  }
+  .button--delete {
+    @apply border border-inherit p-1 rounded-md;
+    
+  }
+  .button__icon {
+    @apply w-4 h-4 text-pink-600;
+  }
 }
 
 /* transitions */
