--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -34,18 +34,22 @@
   }
   .form__input--field,
   .form__input--file {
-    @apply block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500;
+    @apply block w-full px-4 py-1 border border-gray-300 rounded-md shadow-sm focus:ring-pink-500 
+    focus:border-pink-500 focus-visible:outline-none;
   }
 
   .form-submit-btn {
-    @apply w-full px-4 py-2 bg-blue-600 text-white text-sm font-medium rounded-md shadow-sm hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500;
+    @apply w-full px-4 py-2 bg-blue-600 text-white text-sm font-medium rounded-md shadow-sm
+     hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500;
   }
   .message-box {
-    @apply block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500;
+    @apply block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm
+     focus:ring-blue-500 focus:border-blue-500;
   }
   /* image preview */
   .preview-image-item {
-    @apply text-white bg-slate-600 rounded-full w-5 h-5 flex flex-col justify-center items-center p-1 shadow-md hover:bg-red-600 focus:outline-none;
+    @apply text-white bg-slate-600 rounded-full w-5 h-5 flex flex-col justify-center items-center 
+    p-1 shadow-md hover:bg-red-600 focus:outline-none;
   }
 
   /* table */
