--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -145,7 +145,9 @@
   }
 
   .pagination__item {
-    @apply flex items-center justify-center px-3 py-2 text-sm leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white;
+    @apply flex items-center justify-center px-3 py-2 text-sm leading-tight text-gray-500 bg-white border
+     border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700
+      dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white;
   }
 
   .pagination__item--active {
@@ -153,7 +155,9 @@
   }
 
   .pagination__prev-next {
-    @apply flex items-center justify-center h-full py-1.5 px-3 text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white;
+    @apply flex items-center justify-center h-full py-1.5 px-3 text-gray-500 bg-white border
+     border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700
+      dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white;
   }
 
   .pagination__prev {
