--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -11,6 +11,21 @@
 /* components of tailwindcss */
 
 @layer components {
+
+  /* universal start */
+
+  .flex-center {
+    @apply flex justify-center items-center;
+  }
+  
+  .flex-between {
+    @apply flex justify-between items-center;
+  }
+  .flex-around {
+    @apply flex justify-around items-center;
+  }
+
+  /* universal end */
   .product-hover {
     @apply lg:hover:shadow-lg overflow-hidden lg:hover:delay-100 lg:hover:duration-200 lg:hover:ease-in-out;
   }
@@ -167,6 +182,92 @@
   .pagination__next {
     @apply rounded-r-lg;
   }
+
+  /* cards */
+
+  .product-card-container {
+    @apply w-full bg-inherit space-y-1 md:space-y-2 max-w-lg shadow-sm shadow-slate-200 rounded-2xl product-hover py-1.5;
+  }
+
+  .grid-view {
+    @apply flex justify-between items-center;
+  }
+
+  .block-view {
+    @apply block;
+  }
+
+  .image-container-full {
+    @apply w-full flex flex-col justify-center items-center rounded-t-2xl toggle-screen-animation;
+  }
+
+  .image-container-grid {
+    @apply w-3/5 flex flex-col justify-center items-center rounded-t-2xl toggle-screen-animation;
+  }
+
+  .image-full {
+    @apply w-full object-cover h-[182px] rounded-t-xl toggle-screen-animation;
+  }
+
+  .image-grid {
+    @apply w-full object-cover h-[132px] rounded-l-xl toggle-screen-animation;
+  }
+
+  .content-container {
+    @apply px-1 md:px-2 xl:px-3 w-full;
+  }
+
+  .content-full {
+    @apply py-1 md:py-2 lg:py-3 xl:py-5 space-y-3 toggle-screen-animation;
+  }
+
+  .content-grid {
+    @apply py-1 space-y-0 toggle-screen-animation;
+  }
+
+  .title-container {
+    @apply w-full flex justify-start items-center gap-x-1 md:gap-x-2;
+  }
+
+  .title {
+    @apply text-base tracking-wide font-semibold text-gray-800;
+  }
+
+  .description {
+    @apply text-sm tracking-wide leading-relaxed;
+  }
+
+  .price-container {
+    @apply w-full flex justify-between items-center;
+  }
+
+  .price-line-through {
+    @apply line-through;
+  }
+
+  .price-no-underline {
+    @apply no-underline;
+  }
+
+  .price-hidden {
+    @apply hidden;
+  }
+
+  .price-block {
+    @apply no-underline block;
+  }
+
+  .info-button {
+    @apply bg-slate-800/70 text-white w-5 h-5 text-center text-sm rounded-full lg:hover:bg-pink-700;
+  }
+  .offer-card{
+    @apply w-full bg-inherit space-y-2 max-w-full lg:max-w-2xl shadow-xl shadow-slate-200 bg-lime-200 rounded-2xl overflow-hidden;
+  }
+  .offer-title{
+    @apply text-lg text-red-500 tracking-wide font-semibold;
+  }
+
+  /* end cards */
 }
 
 /* transitions */
