--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -2,10 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,500;1,300;1,400;1,500&display=swap');
-
 #app {
-  font-family: 'Work Sans', sans-serif;
+  font-family: 'Inter', sans-serif;
 }
 
 /* components of tailwindcss */
@@ -23,15 +21,14 @@
   .flex-around {
     @apply flex justify-around items-center;
   }
-  .layout__full-height{
-   @apply w-full min-h-screen;
+  .layout__full-height {
+    @apply w-full min-h-screen;
   }
 
   /* grid */
   .product-grid--columns {
     @apply grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3;
   }
-  
 
   /* universal end */
   .product-hover {
@@ -39,7 +36,7 @@
   }
 
   .full-screen-center {
-    @apply  flex flex-col justify-center items-center;
+    @apply flex flex-col justify-center items-center;
   }
 
   /* form */
@@ -55,7 +52,7 @@
   .form-element-container {
     @apply w-full flex flex-col justify-between items-center gap-y-5;
   }
-  .form-label{
+  .form-label {
     @apply block text-sm font-medium text-gray-700;
   }
   .form__input--field,
@@ -72,7 +69,7 @@
     @apply block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm
      focus:ring-blue-500 focus:border-blue-500;
   }
-  .preview-modal__image{
+  .preview-modal__image {
     @apply w-36 h-24 object-cover rounded-md border border-gray-300;
   }
   /* image preview */
@@ -284,11 +281,11 @@
   /* end cards */
 
   /* modal start */
-  .modal__container{
+  .modal__container {
     @apply w-full max-w-3xl bg-white border border-gray-200 p-6 rounded-lg shadow-lg relative;
   }
-  .modal__close--button{
-    @apply absolute top-0 right-0 bg-gray-500 text-white rounded-full p-1 hover:bg-red-600 focus:outline-none; 
+  .modal__close--button {
+    @apply absolute top-0 right-0 bg-gray-500 text-white rounded-full p-1 hover:bg-red-600 focus:outline-none;
   }
   /* modal end */
 
