order is now pritable

--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -296,7 +296,13 @@
   .view-toggle__button--active {
     @apply bg-gray-600 text-pink-200 animate-pulse;
   }
-  /* utilities*/
+  /*end  utilities*/
+
+
+  /* print data or page */
+
+  /* end print data or page */
+
 }
 
 /* transitions */
