--- a/src/assets/compilecss.css
+++ b/src/assets/compilecss.css
@@ -552,6 +552,40 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.container {
+  width: 100%;
+}
+
+@media (min-width: 640px) {
+  .container {
+    max-width: 640px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .container {
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .container {
+    max-width: 1280px;
+  }
+}
+
+@media (min-width: 1536px) {
+  .container {
+    max-width: 1536px;
+  }
+}
+
 /* universal start */
 
 .flex-center {
@@ -1035,10 +1069,6 @@ video {
   background-color: rgb(225 29 72 / var(--tw-bg-opacity));
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.button--hidden {
-  display: none;
 }
 
 .button--inline {
@@ -1605,7 +1635,11 @@ video {
   color: rgb(251 207 232 / var(--tw-text-opacity));
 }
 
-/* utilities*/
+/*end  utilities*/
+
+/* print data or page */
+
+/* end print data or page */
 
 .sr-only {
   position: absolute;
@@ -1765,10 +1799,6 @@ video {
   z-index: 50;
 }
 
-.z-\[599\] {
-  z-index: 599;
-}
-
 .z-\[600\] {
   z-index: 600;
 }
@@ -1801,11 +1831,6 @@ video {
 .my-10 {
   margin-top: 2.5rem;
   margin-bottom: 2.5rem;
-}
-
-.my-2 {
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
 }
 
 .my-20 {
@@ -1908,6 +1933,10 @@ video {
 
 .mt-6 {
   margin-top: 1.5rem;
+}
+
+.mt-8 {
+  margin-top: 2rem;
 }
 
 .mt-\[20px\] {
@@ -2054,6 +2083,10 @@ video {
   height: 100vh;
 }
 
+.max-h-\[180px\] {
+  max-height: 180px;
+}
+
 .max-h-\[450px\] {
   max-height: 450px;
 }
@@ -2070,16 +2103,8 @@ video {
   max-height: 92.5vh;
 }
 
-.max-h-screen {
-  max-height: 100vh;
-}
-
 .min-h-\[220px\] {
   min-height: 220px;
-}
-
-.min-h-\[50vh\] {
-  min-height: 50vh;
 }
 
 .min-h-\[92\.5h\] {
@@ -2250,6 +2275,10 @@ video {
   max-width: 32rem;
 }
 
+.max-w-md {
+  max-width: 28rem;
+}
+
 .max-w-sm {
   max-width: 24rem;
 }
@@ -2264,6 +2293,10 @@ video {
 
 .caption-top {
   caption-side: top;
+}
+
+.border-collapse {
+  border-collapse: collapse;
 }
 
 .border-separate {
@@ -2509,6 +2542,11 @@ video {
   column-gap: 0.375rem;
 }
 
+.gap-x-10 {
+  -moz-column-gap: 2.5rem;
+  column-gap: 2.5rem;
+}
+
 .gap-x-2 {
   -moz-column-gap: 0.5rem;
   column-gap: 0.5rem;
@@ -2724,10 +2762,6 @@ video {
   border-radius: 1rem;
 }
 
-.rounded-3xl {
-  border-radius: 1.5rem;
-}
-
 .rounded-full {
   border-radius: 9999px;
 }
@@ -2807,6 +2841,10 @@ video {
   border-bottom-width: 2px;
 }
 
+.border-l {
+  border-left-width: 1px;
+}
+
 .border-r {
   border-right-width: 1px;
 }
@@ -2827,9 +2865,8 @@ video {
   border-style: dotted;
 }
 
-.border-black {
-  --tw-border-opacity: 1;
-  border-color: rgb(0 0 0 / var(--tw-border-opacity));
+.border-none {
+  border-style: none;
 }
 
 .border-blue-100 {
@@ -2881,6 +2918,10 @@ video {
   border-color: rgb(156 163 175 / 0.25);
 }
 
+.border-gray-400\/30 {
+  border-color: rgb(156 163 175 / 0.3);
+}
+
 .border-gray-400\/50 {
   border-color: rgb(156 163 175 / 0.5);
 }
@@ -2906,10 +2947,6 @@ video {
   border-color: rgb(75 85 99 / 0.3);
 }
 
-.border-gray-600\/60 {
-  border-color: rgb(75 85 99 / 0.6);
-}
-
 .border-gray-700 {
   --tw-border-opacity: 1;
   border-color: rgb(55 65 81 / var(--tw-border-opacity));
@@ -2917,14 +2954,6 @@ video {
 
 .border-gray-700\/20 {
   border-color: rgb(55 65 81 / 0.2);
-}
-
-.border-gray-700\/25 {
-  border-color: rgb(55 65 81 / 0.25);
-}
-
-.border-gray-700\/40 {
-  border-color: rgb(55 65 81 / 0.4);
 }
 
 .border-gray-800 {
@@ -2940,9 +2969,8 @@ video {
   border-color: rgb(31 41 55 / 0.25);
 }
 
-.border-green-400 {
-  --tw-border-opacity: 1;
-  border-color: rgb(74 222 128 / var(--tw-border-opacity));
+.border-gray-900\/70 {
+  border-color: rgb(17 24 39 / 0.7);
 }
 
 .border-inherit {
@@ -2952,11 +2980,6 @@ video {
 .border-pink-200 {
   --tw-border-opacity: 1;
   border-color: rgb(251 207 232 / var(--tw-border-opacity));
-}
-
-.border-pink-500 {
-  --tw-border-opacity: 1;
-  border-color: rgb(236 72 153 / var(--tw-border-opacity));
 }
 
 .border-pink-600 {
@@ -3014,6 +3037,11 @@ video {
 .bg-blue-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(96 165 250 / var(--tw-bg-opacity));
+}
+
+.bg-blue-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
 }
 
 .bg-blue-600 {
@@ -3107,9 +3135,17 @@ video {
   background-color: inherit;
 }
 
+.bg-lime-300\/80 {
+  background-color: rgb(190 242 100 / 0.8);
+}
+
 .bg-lime-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(101 163 13 / var(--tw-bg-opacity));
+}
+
+.bg-lime-900\/75 {
+  background-color: rgb(54 83 20 / 0.75);
 }
 
 .bg-orange-700 {
@@ -3135,6 +3171,11 @@ video {
 .bg-red-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(254 202 202 / var(--tw-bg-opacity));
+}
+
+.bg-red-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
 }
 
 .bg-red-300\/20 {
@@ -3259,10 +3300,6 @@ video {
 .bg-clip-text {
   -webkit-background-clip: text;
   background-clip: text;
-}
-
-.fill-current {
-  fill: currentColor;
 }
 
 .object-cover {
@@ -3472,6 +3509,10 @@ video {
   text-align: center;
 }
 
+.text-right {
+  text-align: right;
+}
+
 .text-start {
   text-align: start;
 }
@@ -3484,6 +3525,11 @@ video {
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .text-9xl {
@@ -3520,8 +3566,16 @@ video {
   font-weight: 700;
 }
 
+.font-extrabold {
+  font-weight: 800;
+}
+
 .font-medium {
   font-weight: 500;
+}
+
+.font-normal {
+  font-weight: 400;
 }
 
 .font-semibold {
@@ -3570,16 +3624,6 @@ video {
 
 .tracking-widest {
   letter-spacing: 0.1em;
-}
-
-.text-black {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
-}
-
-.text-blue-500 {
-  --tw-text-opacity: 1;
-  color: rgb(59 130 246 / var(--tw-text-opacity));
 }
 
 .text-blue-600 {
@@ -3665,11 +3709,6 @@ video {
   color: rgb(251 207 232 / var(--tw-text-opacity));
 }
 
-.text-pink-500 {
-  --tw-text-opacity: 1;
-  color: rgb(236 72 153 / var(--tw-text-opacity));
-}
-
 .text-pink-600 {
   --tw-text-opacity: 1;
   color: rgb(219 39 119 / var(--tw-text-opacity));
@@ -3678,6 +3717,11 @@ video {
 .text-pink-800 {
   --tw-text-opacity: 1;
   color: rgb(157 23 77 / var(--tw-text-opacity));
+}
+
+.text-red-300 {
+  --tw-text-opacity: 1;
+  color: rgb(252 165 165 / var(--tw-text-opacity));
 }
 
 .text-red-400 {
@@ -3690,9 +3734,18 @@ video {
   color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
+.text-red-500\/60 {
+  color: rgb(239 68 68 / 0.6);
+}
+
 .text-red-600 {
   --tw-text-opacity: 1;
   color: rgb(220 38 38 / var(--tw-text-opacity));
+}
+
+.text-sky-100 {
+  --tw-text-opacity: 1;
+  color: rgb(224 242 254 / var(--tw-text-opacity));
 }
 
 .text-stone-50 {
@@ -3725,10 +3778,6 @@ video {
 
 .underline {
   text-decoration-line: underline;
-}
-
-.line-through {
-  text-decoration-line: line-through;
 }
 
 .underline-offset-8 {
@@ -3793,16 +3842,6 @@ video {
     var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-gray-300 {
-  --tw-shadow-color: #d1d5db;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.shadow-gray-400\/25 {
-  --tw-shadow-color: rgb(156 163 175 / 0.25);
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
 .shadow-red-300 {
   --tw-shadow-color: #fca5a5;
   --tw-shadow: var(--tw-shadow-colored);
@@ -3810,11 +3849,6 @@ video {
 
 .shadow-slate-200 {
   --tw-shadow-color: #e2e8f0;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.shadow-white {
-  --tw-shadow-color: #fff;
   --tw-shadow: var(--tw-shadow-colored);
 }
 
@@ -3832,6 +3866,15 @@ video {
     var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0
     calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow),
+    var(--tw-shadow, 0 0 #0000);
+}
+
+.ring-2 {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0
+    var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0
+    calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow),
     var(--tw-shadow, 0 0 #0000);
 }
@@ -3854,8 +3897,20 @@ video {
   --tw-ring-color: rgb(209 213 219 / var(--tw-ring-opacity));
 }
 
+.ring-white\/60 {
+  --tw-ring-color: rgb(255 255 255 / 0.6);
+}
+
 .ring-opacity-5 {
   --tw-ring-opacity: 0.05;
+}
+
+.ring-offset-2 {
+  --tw-ring-offset-width: 2px;
+}
+
+.ring-offset-sky-300 {
+  --tw-ring-offset-color: #7dd3fc;
 }
 
 .filter {
@@ -3916,6 +3971,10 @@ video {
   transition-duration: 200ms;
 }
 
+.duration-300 {
+  transition-duration: 300ms;
+}
+
 .duration-75 {
   transition-duration: 75ms;
 }
@@ -3941,7 +4000,7 @@ video {
 }
 
 #app {
-  font-family: 'Work Sans', sans-serif;
+  font-family: 'Inter', sans-serif;
 }
 
 /* components of tailwindcss */
@@ -3994,6 +4053,20 @@ video {
   border-style: none;
 }
 
+.hover\:border-blue-500\/50:hover {
+  border-color: rgb(59 130 246 / 0.5);
+}
+
+.hover\:bg-blue-100:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(219 234 254 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-blue-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-blue-700:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(29 78 216 / var(--tw-bg-opacity));
@@ -4002,6 +4075,11 @@ video {
 .hover\:bg-gray-100:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-gray-300:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-gray-50:hover {
@@ -4021,6 +4099,11 @@ video {
 
 .hover\:bg-red-600\/70:hover {
   background-color: rgb(220 38 38 / 0.7);
+}
+
+.hover\:text-blue-500:hover {
+  --tw-text-opacity: 1;
+  color: rgb(59 130 246 / var(--tw-text-opacity));
 }
 
 .hover\:text-indigo-500:hover {
@@ -4133,10 +4216,19 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+:is([dir='rtl'] .rtl\:text-right) {
+  text-align: right;
+}
+
 @media (prefers-color-scheme: dark) {
   .dark\:border-gray-600 {
     --tw-border-opacity: 1;
     border-color: rgb(75 85 99 / var(--tw-border-opacity));
+  }
+
+  .dark\:border-gray-700 {
+    --tw-border-opacity: 1;
+    border-color: rgb(55 65 81 / var(--tw-border-opacity));
   }
 
   .dark\:bg-gray-700 {
@@ -4171,17 +4263,26 @@ video {
 }
 
 @media print {
-  .print\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
+  .print\:hidden {
+    display: none;
   }
 
-  .print\:leading-relaxed {
-    line-height: 1.625;
+  .print\:border-none {
+    border-style: none;
   }
 
-  .print\:tracking-wider {
-    letter-spacing: 0.05em;
+  .print\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .print\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .print\:text-gray-700\/60 {
+    color: rgb(55 65 81 / 0.6);
   }
 }
 
@@ -4387,11 +4488,6 @@ video {
     gap: 0.75rem;
   }
 
-  .md\:gap-x-0 {
-    -moz-column-gap: 0px;
-    column-gap: 0px;
-  }
-
   .md\:space-x-3 > :not([hidden]) ~ :not([hidden]) {
     --tw-space-x-reverse: 0;
     margin-right: calc(0.75rem * var(--tw-space-x-reverse));
@@ -4421,11 +4517,6 @@ video {
   .md\:px-3 {
     padding-left: 0.75rem;
     padding-right: 0.75rem;
-  }
-
-  .md\:px-4 {
-    padding-left: 1rem;
-    padding-right: 1rem;
   }
 
   .md\:py-20 {
@@ -4635,11 +4726,6 @@ video {
     padding-right: 1.25rem;
   }
 
-  .lg\:px-6 {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-  }
-
   .lg\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
@@ -4700,11 +4786,6 @@ video {
   .lg\:hover\:border-gray-500:hover {
     --tw-border-opacity: 1;
     border-color: rgb(107 114 128 / var(--tw-border-opacity));
-  }
-
-  .lg\:hover\:bg-blue-600:hover {
-    --tw-bg-opacity: 1;
-    background-color: rgb(37 99 235 / var(--tw-bg-opacity));
   }
 
   .lg\:hover\:bg-gray-100\/80:hover {
@@ -4850,10 +4931,6 @@ video {
     width: 66.666667%;
   }
 
-  .xl\:w-3\/4 {
-    width: 75%;
-  }
-
   .xl\:w-4\/12 {
     width: 33.333333%;
   }
@@ -4917,11 +4994,6 @@ video {
   .xl\:px-0 {
     padding-left: 0px;
     padding-right: 0px;
-  }
-
-  .xl\:px-10 {
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
   }
 
   .xl\:px-4 {
