--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -285,7 +285,7 @@
     @apply w-full max-w-3xl bg-white border border-gray-200 p-6 rounded-lg shadow-lg relative;
   }
   .modal__close--button {
-    @apply absolute top-0 right-0 bg-gray-500 text-white rounded-full p-1 hover:bg-red-600 focus:outline-none;
+    @apply absolute top-0 right-0 bg-gray-500 text-white rounded-full p-1 hover:bg-red-600 focus:outline-none cursor-pointer;
   }
   /* modal end */
 
