--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -282,7 +282,7 @@
 
   /* modal start */
   .modal__container {
-    @apply w-full max-w-3xl bg-white border border-gray-200 p-6 rounded-lg shadow-lg relative;
+    @apply w-full  bg-white border border-gray-200 p-6 rounded-lg shadow-lg relative;
   }
   .modal__close--button {
     @apply absolute top-0 right-0 bg-gray-500 text-white rounded-full p-1 hover:bg-red-600 focus:outline-none cursor-pointer;
@@ -303,6 +303,9 @@
   .modal-large{
     width: 120rem !important;
   }
+
+  /* search form component */
+  
   /*end  utilities*/
 
   /* print data or page */
